Bump up Scala 3.3.0